--- a/Donsol.mw
+++ b/Donsol.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator sorsogon donsol.png|right|270px]]	
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Donsol, Sorsogon
@@ -14,7 +14,6 @@
 |}}
 Say '''Donsol''' et kumatlo ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 49,711 totoo. Walay kabaleg tan sukat to ya 156.2 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4715.	
 					
-
 ==Saray barangay==
 
 * Alin
@@ -69,8 +68,9 @@ Say '''Donsol''' et kumatlo ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas
 * Tupas
 * Vinisitahan
 
+== Saray reperensiya ==
+{{Reflist}}
 	
-
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
