--- a/Irosin.mw
+++ b/Irosin.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon irosin.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Irosin, Sorsogon
 | 1990 = 37887		
@@ -14,7 +15,6 @@
 Say '''Irosin''' et kumadwa ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 56,662 
 totoo. Walay kabaleg tan sukat to ya 149.87 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4707.	
 							
-
 ==Saray barangay==
 
 * Bagsangan
@@ -46,6 +46,8 @@ totoo. Walay kabaleg tan sukat to ya 149.87 sq. km. Sikato et walad kumadwa ya d
 * Tinampo
 * Tongdol
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -53,6 +55,5 @@ totoo. Walay kabaleg tan sukat to ya 149.87 sq. km. Sikato et walad kumadwa ya d
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sorsogon}}
- 
-								
+ 							
 [[Category:Saray baley na Sorsogon]]
