--- a/Pata.mw
+++ b/Pata.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu pata.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pata, Sulu
 | 1990 = 9244		
@@ -14,7 +15,6 @@
 Say '''Pata''' et kumalima ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 14,918 totoo. Walay kabaleg tan sukat to ya 116.99 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 7405.
         
-
 ==Saray barangay==
 * Andalan  
 * Daungdong 
@@ -30,6 +30,9 @@ Unong ed 2010 Census, say papulasyon to et 14,918 totoo. Walay kabaleg tan sukat
 * Saimbangon 
 * Sangkap 
 * Timuddas
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
