--- a/Tapul.mw
+++ b/Tapul.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sulu tapul.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tapul, Sulu
 | 1990 = 10111		
@@ -14,7 +15,6 @@
 Say '''Tapul''' et kumalima ya klase baley ed luyag na [[Sulu]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 16,370 totoo. Walay kabaleg tan sukat to ya 89.17 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 7410.
         
-
 ==Saray barangay==
 * Alu-Kabingaan 
 * Banting  
@@ -31,6 +31,9 @@ Unong ed 2010 Census, say papulasyon to et 16,370 totoo. Walay kabaleg tan sukat
 * Sumambat 
 * Tangkapaan 
 * Tulakan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
