--- a/Siyudad_na_Surigao.mw
+++ b/Siyudad_na_Surigao.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_surigao_del_norte_surigao.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Siyudad na Surigao''' et kumatlo ya klase siyudad ed luyag na [[Surigao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 140,540 totoo. <br> 	
-Walay kabaleg tan sukat to ya 245.30 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8400. 			
+Walay kabaleg tan sukat to ya 245.30 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8400. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Surigao del Norte}}	
 									
 [[Category:Saray siyudad na Filipinas]]
