--- a/Claver.mw
+++ b/Claver.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte claver.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Claver, Surigao del Norte
 | 1990 = 13452		
@@ -14,7 +15,6 @@
 Say '''Claver''' et kumadwa ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 23,702 totoo. Walay kabaleg tan sukat to ya 322.60 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8410.
         
-
 ==Saray barangay==
 * Bagakay (Pob. West)
 * Cabugo
@@ -30,6 +30,9 @@ Unong ed 2010 Census, say papulasyon to et 23,702 totoo. Walay kabaleg tan sukat
 * Tayaga (Pob. East)
 * Urbiztondo
 * Wangke
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
