--- a/Dapa.mw
+++ b/Dapa.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte dapa.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dapa, Surigao del Norte
 | 1990 = 17396		
@@ -14,7 +15,6 @@
 Say '''Dapa''' et kumapat ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 23,492 totoo. Walay kabaleg tan sukat to ya 91.90 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8410.
         
-
 ==Saray barangay==
 * Bagakay  
 * Baranggay 1 (Pob.) 
@@ -46,6 +46,8 @@ Unong ed 2010 Census, say papulasyon to et 23,492 totoo. Walay kabaleg tan sukat
 * Santa Felomina 
 * Union 
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
