--- a/Del_Carmen.mw
+++ b/Del_Carmen.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte del carmen.png|right|270px]]      
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Del Carmen, Surigao del Norte
 | 1990 = 11786		
@@ -14,7 +15,6 @@
 Say '''Del Carmen''' et kumalima ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 17,136 totoo. Walay kabaleg tan sukat to ya 151.68 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8417.
         
-
 ==Saray barangay==
 * Antipolo 
 * Bagakay (Alburo)  
@@ -37,6 +37,8 @@ Unong ed 2010 Census, say papulasyon to et 17,136 totoo. Walay kabaleg tan sukat
 * Sayak 
 * Tuboran
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
