--- a/General_Luna.mw
+++ b/General_Luna.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte general luna.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> General Luna, Surigao del Norte
 | 1990 = 11535		
@@ -14,7 +15,6 @@
 Say '''General Luna''' et kumalima ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 15,014 totoo. Walay kabaleg tan sukat to ya 41.30 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8418.
         
-
 ==Saray barangay==
 * Anajawan  
 * Cabitoonan 
@@ -36,6 +36,8 @@ Unong ed 2010 Census, say papulasyon to et 15,014 totoo. Walay kabaleg tan sukat
 * Suyangan 
 * Tawin-tawin 
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
