--- a/Mainit.mw
+++ b/Mainit.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte mainit.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mainit, Surigao del Norte
 | 1990 = 21505		
@@ -14,7 +15,6 @@
 Say '''Mainit''' et kumapat ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 25,596 totoo. Walay kabaleg tan sukat to ya 107.76 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8409.
         
-
 ==Saray barangay==
 * Binga  
 * Bobona-on 
@@ -37,6 +37,9 @@ Unong ed 2010 Census, say papulasyon to et 25,596 totoo. Walay kabaleg tan sukat
 * Tagbuyawan 
 * Tapi-an 
 * Tolingon 
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
