--- a/Pilar,_Surigao_del_Norte.mw
+++ b/Pilar,_Surigao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte pilar.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pilar, Surigao del Norte
 | 1990 = 7873		
@@ -14,7 +15,6 @@
 Say '''Pilar''' et kumalima ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 9,456 totoo. Walay kabaleg tan sukat to ya 77.11 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8402.
         
-
 ==Saray barangay==
 * Asinan (Pob.)
 * Centro (Pob.)
@@ -31,6 +31,9 @@ Unong ed 2010 Census, say papulasyon to et 9,456 totoo. Walay kabaleg tan sukat 
 * Mabuhay 
 * Salvacion 
 * San Roque 
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
