--- a/San_Benito.mw
+++ b/San_Benito.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte san benito.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Benito, Surigao del Norte
 | 1990 = 4315		
@@ -14,7 +15,6 @@
 Say '''San Benito''' et kumanem ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 5,505 totoo. Walay kabaleg tan sukat to ya 45.63 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8405.
       
-
 ==Saray barangay==
 * Bongdo  
 * Maribojoc 
@@ -23,6 +23,8 @@ Unong ed 2010 Census, say papulasyon to et 5,505 totoo. Walay kabaleg tan sukat 
 * Santa Cruz (Pob.) 
 * Talisay (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
   
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
