--- a/San_Francisco,_Surigao_del_Norte.mw
+++ b/San_Francisco,_Surigao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte san francisco.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Francisco, Surigao del Norte
 | 1990 = 9445		
@@ -14,7 +15,6 @@
 Say '''San Francisco''' et kumalima ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 13,335 totoo. Walay kabaleg tan sukat to ya 56.72 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8401.
         
-
 ==Saray barangay==
 * Amontay  
 * Balite 
@@ -27,6 +27,9 @@ Unong ed 2010 Census, say papulasyon to et 13,335 totoo. Walay kabaleg tan sukat
 * Magtangale 
 * Oslao 
 * Poblacion
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
