--- a/San_Isidro,_Surigao_del_Norte.mw
+++ b/San_Isidro,_Surigao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte san isidro.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Isidro, Surigao del Norte
 | 1990 = 5245		
@@ -28,6 +29,8 @@ Unong ed 2010 Census, say papulasyon to et 6,973 totoo. Walay kabaleg tan sukat 
 * Tambacan 
 * Tigasao
 
+== Saray reperensiya ==
+{{Reflist}}
     
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
