--- a/Socorro,_Surigao_del_Norte.mw
+++ b/Socorro,_Surigao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte socorro.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Socorro, Surigao del Norte
 | 1990 = 14179		
@@ -14,7 +15,6 @@
 Say '''Socorro''' et kumapat ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 20,304 totoo. Walay kabaleg tan sukat to ya 114.45 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8516.
  
-
 ==Saray barangay==
 * Albino Taruc 
 * Del Pilar  
@@ -31,6 +31,8 @@ Unong ed 2010 Census, say papulasyon to et 20,304 totoo. Walay kabaleg tan sukat
 * Songkoy 
 * Sudlon
 
+== Saray reperensiya ==
+{{Reflist}}
   
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
