--- a/Tubod,_Surigao_del_Norte.mw
+++ b/Tubod,_Surigao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del norte tubod.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tubod, Surigao del Norte
 | 1990 = 11194		
@@ -14,7 +15,6 @@
 Say '''Tubod''' et kumalima ya klase baley ed luyag na [[Surigao del Norte]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 12,569 totoo. Walay kabaleg tan sukat to ya 45.34 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8406.
         
-
 ==Saray barangay==
 * Capayahan  
 * Cawilan 
@@ -26,7 +26,8 @@ Unong ed 2010 Census, say papulasyon to et 12,569 totoo. Walay kabaleg tan sukat
 * San Pablo 
 * Timamana
 
-
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
