--- a/Barobo.mw
+++ b/Barobo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur barobo.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Barobo, Surigao del Sur
 | 1990 = 32991		
@@ -14,7 +15,6 @@
 Say '''Barobo''' et kumatlo ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 43,663 totoo. Walay kabaleg tan sukat to ya 242.50 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8309.
         
-
 ==Saray barangay==
 * Amaga
 * Bahi
@@ -39,6 +39,8 @@ Unong ed 2010 Census, say papulasyon to et 43,663 totoo. Walay kabaleg tan sukat
 * Unidad
 * Wakat
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -47,5 +49,4 @@ Unong ed 2010 Census, say papulasyon to et 43,663 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
  
-
 [[Category:Saray baley na Surigao del Sur]]
