--- a/Bayabas,_Surigao_del_Sur.mw
+++ b/Bayabas,_Surigao_del_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur bayabas.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bayabas, Surigao del Sur
 | 1990 = 6259		
@@ -14,7 +15,6 @@
 Say '''Bayabas''' et kumalima ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 7,779 totoo. Walay kabaleg tan sukat to ya 117.84 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8303.
 
-
 ==Saray barangay==
 * Amag  
 * Balete (Pob.) 
@@ -24,6 +24,8 @@ Unong ed 2010 Census, say papulasyon to et 7,779 totoo. Walay kabaleg tan sukat 
 * Magobawok (Pob.)
 * Panaosawon
 
+== Saray reperensiya ==
+{{Reflist}}
         
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
