--- a/Cagwait.mw
+++ b/Cagwait.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur cagwait.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cagwait, Surigao del Sur
 | 1990 = 16868		
@@ -14,7 +15,6 @@
 Say '''Cagwait''' et kumapat ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 18,899 totoo. Walay kabaleg tan sukat to ya 214.10 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8311.
       
-
 ==Saray barangay==
 * Aras-asan  
 * Bacolod 
@@ -28,6 +28,8 @@ Unong ed 2010 Census, say papulasyon to et 18,899 totoo. Walay kabaleg tan sukat
 * Tubo-tubo 
 * Unidad
 
+== Saray reperensiya ==
+{{Reflist}}
   
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
