--- a/Cantilan.mw
+++ b/Cantilan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur cantilan.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cantilan, Surigao del Sur
 | 1990 = 24868		
@@ -14,7 +15,6 @@
 Say '''Cantilan''' et kumadwa ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 30,231 totoo. Walay kabaleg tan sukat to ya 240.10 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8317.
         
-
 ==Saray barangay==
 * Bugsukan  
 * Buntalid
@@ -33,6 +33,9 @@ Unong ed 2010 Census, say papulasyon to et 30,231 totoo. Walay kabaleg tan sukat
 * San Pedro
 * Tapi 
 * Tigabong
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
