--- a/Carmen,_Surigao_del_Sur.mw
+++ b/Carmen,_Surigao_del_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur carmen.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Carmen, Surigao del Sur
 | 1990 = 8787		
@@ -14,7 +15,6 @@
 Say '''Carmen''' et kumalima ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 10,287 totoo. Walay kabaleg tan sukat to ya 160.01 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8315.
       
-
 ==Saray barangay==
 *Poblacion
 *Sta. Cruz
@@ -25,12 +25,14 @@ Unong ed 2010 Census, say papulasyon to et 10,287 totoo. Walay kabaleg tan sukat
 *Hinapuyan
 *Gacub
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Surigao del Sur}}
- 
-  
+   
 [[Category:Saray baley na Surigao del Sur]]
