--- a/Carrascal.mw
+++ b/Carrascal.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur carrascal.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Carrascal, Surigao del Sur
 | 1990 = 12693		
@@ -14,7 +15,6 @@
 Say '''Carrascal''' et kumapat ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 16,529 totoo. Walay kabaleg tan sukat to ya 265.80 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8318.
        
-
 ==Saray barangay==
 * Adlay           
 * Babuyan         
@@ -31,6 +31,8 @@ Unong ed 2010 Census, say papulasyon to et 16,529 totoo. Walay kabaleg tan sukat
 * Saca (Pob.) 
 * Tag-Anito 
 
+== Saray reperensiya ==
+{{Reflist}}
  
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
