--- a/Hinatuan.mw
+++ b/Hinatuan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur hinatuan.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hinatuan, Surigao del Sur
 | 1990 = 33307		
@@ -14,7 +15,6 @@
 Say '''Hinatuan''' et kumadwa ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 38,731 totoo. Walay kabaleg tan sukat to ya 299.10 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8310.
         
-
 ==Saray barangay==
 * Baculin  
 * Benigno Aquino (Zone I Pob.) 
@@ -40,6 +40,9 @@ Unong ed 2010 Census, say papulasyon to et 38,731 totoo. Walay kabaleg tan sukat
 * Tiwi 
 * Zone II (Sto. Niño.Pob.) 
 * Zone III Maharlika (Pob.) 
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
