--- a/Lanuza.mw
+++ b/Lanuza.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur lanuza.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lanuza, Surigao del Sur
 | 1990 = 9051		
@@ -14,7 +15,6 @@
 Say '''Lanuza''' et kumapat ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 11,857 totoo. Walay kabaleg tan sukat to ya 290.60 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8314.
         
-
 ==Saray barangay==
 * Agsam
 * Bocawe
@@ -29,6 +29,9 @@ Unong ed 2010 Census, say papulasyon to et 11,857 totoo. Walay kabaleg tan sukat
 * Zone II (Pob.)
 * Zone III (Pob.)
 * Zone IV (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
