--- a/Lingig.mw
+++ b/Lingig.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur lingig.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lingig, Surigao del Sur
 | 1990 = 21015		
@@ -14,7 +15,6 @@
 Say '''Lingig''' et kumadwa ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 31,544 totoo. Walay kabaleg tan sukat to ya 305.17 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8312.
      
-
 ==Saray barangay==
 * Anibongan  
 * Barcelona 
@@ -35,6 +35,8 @@ Unong ed 2010 Census, say papulasyon to et 31,544 totoo. Walay kabaleg tan sukat
 * Union 
 * Valencia 
 
+== Saray reperensiya ==
+{{Reflist}}
   
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
