--- a/Madrid,_Surigao_del_Sur.mw
+++ b/Madrid,_Surigao_del_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur madrid.png|right|270px]]      
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Madrid, Surigao del Sur
 | 1990 = 12977		
@@ -14,7 +15,6 @@
 Say '''Madrid''' et kumapat ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 14,888 totoo. Walay kabaleg tan sukat to ya 141.20 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8316.
         
-
 ==Saray barangay==
 * Bayogo
 * Magsaysay
@@ -28,6 +28,9 @@ Unong ed 2010 Census, say papulasyon to et 14,888 totoo. Walay kabaleg tan sukat
 * San Vicente
 * Songkit
 * Union
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
