--- a/San_Agustin,_Surigao_del_Sur.mw
+++ b/San_Agustin,_Surigao_del_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur san agustin.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Agustin, Surigao del Sur
 | 1990 = 11982		
@@ -14,7 +15,6 @@
 Say '''San Agustin''' et kumapat ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 20,655 totoo. Walay kabaleg tan sukat to ya 277.28 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8305.
         
-
 ==Saray barangay==
 * Bretania  
 * Buatong 
@@ -29,6 +29,9 @@ Unong ed 2010 Census, say papulasyon to et 20,655 totoo. Walay kabaleg tan sukat
 * Pongtod 
 * Salvacion 
 * Sto. Niño
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
