--- a/San_Miguel,_Surigao_del_Sur.mw
+++ b/San_Miguel,_Surigao_del_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur san miguel.png|right|270px]]		
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Miguel, Surigao del Sur
 | 1990 = 21671		
@@ -14,7 +15,6 @@
 		
 Say '''San Miguel''' et unaan ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 36,287 totoo. Walay kabaleg tan sukat to ya 558 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8301.	
 			
-
 ==Saray barangay==
 * Bagyang  
 * Baras 
@@ -35,6 +35,8 @@ Say '''San Miguel''' et unaan ya klase baley ed luyag na [[Surigao del Sur]], [[
 * Tina 
 * Umalag 
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
