--- a/Tagbina.mw
+++ b/Tagbina.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur tagbina.png|right|270px]]      
+{{Infobox location}}
+   
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tagbina, Surigao del Sur
 | 1990 = 28976		
@@ -14,7 +15,6 @@
 Say '''Tagbina''' et kumadwa ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 34,812 totoo. Walay kabaleg tan sukat to ya 343.49 sq. km. Sikato et walad kumadwa  distrito. Say zip code to et 8308.
         
-
 ==Saray barangay==
 * Batunan
 * Carpenito
@@ -41,6 +41,9 @@ Unong ed 2010 Census, say papulasyon to et 34,812 totoo. Walay kabaleg tan sukat
 * Trinidad
 * Ugoban
 * Villaverde
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
