--- a/Tago.mw
+++ b/Tago.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator surigao del sur tago.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tago, Surigao del Sur
 | 1990 = 23987		
@@ -14,7 +15,6 @@
 Say '''Tago''' et kumadwa ya klase baley ed luyag na [[Surigao del Sur]], [[Pilipinas]]. <br>  
 Unong ed 2010 Census, say papulasyon to et 33,993 totoo. Walay kabaleg tan sukat to ya 253.28 sq. km. Sikato et walad unaan  distrito. Say zip code to et 8302.
         
-
 ==Saray barangay==
 * Alba  
 * Anahao Bag-o 
@@ -41,6 +41,8 @@ Unong ed 2010 Census, say papulasyon to et 33,993 totoo. Walay kabaleg tan sukat
 * Unidos 
 * Victoria 
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -49,5 +51,4 @@ Unong ed 2010 Census, say papulasyon to et 33,993 totoo. Walay kabaleg tan sukat
 
 {{Surigao del Sur}}
  
-
 [[Category:Saray baley na Surigao del Sur]]
