--- a/Siyudad_na_Tarlac.mw
+++ b/Siyudad_na_Tarlac.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_tarlac_tarlac.png|right|270px]] 							
-									
+{{Infobox location}}
+							
 Say '''Siyudad na Tarlac''' et unaan ya klase siyudad ed luyag na [[Tarlac]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 318,332 totoo. <br> 	
-Walay kabaleg tan sukat to ya 274.66 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 2300. 			
+Walay kabaleg tan sukat to ya 274.66 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 2300. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Tarlac}}	
 									
 [[Category:Saray siyudad na Filipinas]]
