--- a/Anao.mw
+++ b/Anao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator tarlac anao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Anao, Tarlac
 | 1990 = 7955		
@@ -33,6 +34,9 @@ Say '''Anao''' et kumalima ya klase baley ed luyag na [[Tarlac]], [[Pilipinas]].
 * Santo Domingo
 * Sinense
 * Suaverdez
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
