--- a/Moncada,_Tarlac.mw
+++ b/Moncada,_Tarlac.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator tarlac moncada.png|right|270px]]      
+{{Infobox location}}
+  
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Moncada, Tarlac
 | 1990 = 41672		
@@ -53,12 +54,14 @@ Unong ed 2010 Census, say papulasyon to et 56,183 totoo. Walay kabaleg tan sukat
 * Tubectubang
 * Villa
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Tarlac}}
- 
-        
+         
 [[Category:Saray baley na Tarlac]]
