--- a/Pura.mw
+++ b/Pura.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator tarlac pura.png|right|270px]]      
+{{Infobox location}}
+ 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pura, Tarlac
 | 1990 = 18032		
@@ -32,12 +33,14 @@ Unong ed 2010 Census, say papulasyon to et 22,949 totoo. Walay kabaleg tan sukat
 * Poroc 
 * Singat 
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Tarlac}}
- 
-        
+         
 [[Category:Saray baley na Tarlac]]
