--- a/San_Clemente.mw
+++ b/San_Clemente.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator tarlac san clemente.png|right|270px]]      
+{{Infobox location}}
+    
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Clemente, Tarlac
 | 1990 = 8873		
@@ -27,6 +28,9 @@ Unong ed 2010 Census, say papulasyon to et 12,510 totoo. Walay kabaleg tan sukat
 * Pit-ao 
 * Poblacion Norte 
 * Poblacion Sur
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
